src/test/deca/context/invalid/homemade/tests/test366_champ_inaccessible2.deca
// test invalide de la règle 3.66


class A{
    protected int x;
}

class B extends A {
    int set(A a) {
        a.x = 3;
    }
}